--- a/index.html
+++ b/index.html
@@ -99,6 +99,24 @@
         #sec::after {
             content: 'SEC';
         }
+
+        @media screen and (max-width:500px) {
+
+            #hrs,
+            #min,
+            #sec {
+                font-size: 2.5rem;
+            }
+
+            .container::after {
+                width: 100px;
+                height: 100px;
+                right: 10px;
+            }
+            .clock span{
+                width: 3rem;
+            }
+        }
     </style>
 </head>
 
